feat: button extends

--- a/packages/jj-design/button/index.less
+++ b/packages/jj-design/button/index.less
@@ -1,3 +1,53 @@
 .jj-btn {
-  background: #fff;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: all 0.2s;
+}
+
+// ============== type
+.btn-type-default {
+  color: #000;
+  background-color: #fff;
+}
+.btn-type-default:hover {
+  color: #0094ff;
+  border-color: #0094ff;
+}
+
+.btn-type-primary {
+  color: #fff;
+  background-color: #000;
+}
+
+.btn-type-primary:hover {
+  color: #000;
+  background-color: #efefef;
+  border-color: #efefef;
+}
+
+.btn-type-text {
+  border: none;
+  background: transparent;
+}
+
+.btn-type-text:hover {
+  background-color: #efefef;
+}
+
+// ============== size
+
+.btn-size-middle {
+  padding: 8px 16px;
+}
+
+.btn-size-small {
+  padding: 4px 8px;
+}
+
+.btn-size-large {
+  padding: 12px 24px;
+}
+
+.btn-block {
+  width: 100%;
 }
