feat: danger&round btn

--- a/packages/jj-design/button/index.less
+++ b/packages/jj-design/button/index.less
@@ -25,6 +25,16 @@
   border-color: #efefef;
 }
 
+.btn-type-danger {
+  color: #ee2746;
+  background-color: #fff;
+  border-color: #ee2746;
+}
+
+.btn-type-danger:hover {
+  opacity: 0.5;
+}
+
 .btn-type-text {
   border: none;
   background: transparent;
@@ -48,6 +58,12 @@
   padding: 12px 24px;
 }
 
+// ============== shape
+
 .btn-block {
   width: 100%;
+}
+
+.btn-round {
+  border-radius: 8px;
 }
