--- a/packages/doc-site/src/animated/demo/animated/index.css
+++ b/packages/doc-site/src/animated/demo/animated/index.css
@@ -1,13 +1,15 @@
-.fade-enter-from {
+.fade-enter-from,
+.fade-leave-to {
   opacity: 0;
 }
 
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 500ms ease-in-out;
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 1s ease-in-out;
 }
 
-.fade-enter-to {
+.fade-enter-to,
+.fade-leave-from {
   opacity: 1;
 }
 
@@ -17,5 +19,5 @@
 
 .fade-exit-active {
   opacity: 0;
-  transition: opacity 500ms ease-in-out;
+  transition: all 1s ease-in-out;
 }
